@@ -48,6 +48,10 @@ int main(int argc, char *argv[])
 
     QT_REQUIRE_VERSION(argc, argv, "5.2.0")
 
+#if defined(Q_OS_WIN)
+    VAbstractApplication::WinAttachConsole();
+#endif
+
     // Need to internally move a node inside a piece main path
     qRegisterMetaTypeStreamOperators<VPieceNode>("VPieceNode");
 
