@@ -73,6 +73,7 @@
 - Fix issue. Curves look too wavy.
 - [#773] Tool Point intersection curve and axis cannot find desired intersection point.
 - [#776] Valentina cannot recognize translated functions.
+- [#778] Calling Valentina with "-h" option opens information dialog instead of writing to console.
 
 # Version 0.5.0 May 9, 2017
 - [#581] User can now filter input lists by keyword in function wizard.
